# project-api-app

./: .gitignore
.github/workflows/: ci.yml
google-api-project/: .coverage  client_secret_49542491187-2405g5uj9ufkost6pmavo803sqqdiels.apps.googleusercontent.com.json  pyproject.toml  pytest.ini  test.py
google-api-project/api/: apps.py  google_calendar.py  models.py  pipelines.py  serializers.py  signals.py  tasks.py  urls.py  views.py
google-api-project/api/migrations/: 0001_initial.py  0002_init_google_token.py  0003_googleoauthtoken_id_token.py  0004_alter_googleoauthtoken_id_token.py
google-api-project/core/: celery.py  settings.py  urls.py
google-api-project/tests/: conftest.py  test_google_calendar_exceptions.py  test_signals.py  test_tasks.py  test_tasks_exceptions.py
