[tool.poetry]
name = "google-api-project"
version = "0.1.0"
description = ""
authors = ["Ryojin.05 <cun63301@gmail.com>"]
readme = "README.md"
packages = [
    { include = "api" },
    { include = "core" }
]

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2.6,<6.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
social-auth-app-django = ">=5.5.1,<6.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-decouple = ">=3.8,<4.0"
djangorestframework-simplejwt = { version = ">=5.5.1,<6.0.0", extras = ["blacklist"] }
google-auth = ">=2.40.3,<3.0.0"
drf-spectacular = ">=0.28.0,<0.29.0"
drf-spectacular-sidecar = ">=2025.9.1,<2026.0.0"
celery = ">=5.5.3,<6.0.0"
redis = ">=6.4.0,<7.0.0"
google-api-python-client = ">=2.182.0,<3.0.0"
google-auth-oauthlib = ">=1.2.2,<2.0.0"
google-auth-httplib2 = ">=0.2.0,<0.3.0"
python-dotenv = ">=1.1.1,<2.0.0"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.0,<5.0)",
    "pytest-django (>=4.9.0,<5.0.0)"
]

[tool.poetry.group.dev.dependencies]
black = ">=25.9.0,<26.0.0"
flake8 = ">=7.3.0,<8.0.0"
isort = ">=6.0.1,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
